--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,10 +1,3 @@
-
-
-
-
-
-
-
 .footer {
   background-color: #0d0d0d;
   color: #f0f0f0;
@@ -23,7 +16,7 @@
 
 .footer-brand h2 {
   font-size: 2rem;
-  color: #DDB76A;
+  color: orange;
 }
 
 .footer-brand p {
@@ -60,7 +53,7 @@
 }
 
 .footer-links ul li a:hover {
-  color: #ddb76a;
+  color: orange;
 }
 
 .footer-contact p {
@@ -86,6 +79,6 @@
 }
 
 .footer-bottom a {
-  color: #ddb76a;
+  color: orange;
   text-decoration: none;
 }
