--- a/client/src/components/MLAI/Hotspots/Hotspots.css
+++ b/client/src/components/MLAI/Hotspots/Hotspots.css
@@ -5,17 +5,63 @@
     background-color: black;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
 
+.hotspots-menu{
+    background-color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(255, 253, 253, 0.955);
+}
+
+.hotspots-menu button{
+    width: 50%;
+    padding: 10px;
+    background-color: black;
+    color: white;
+    font-weight: bold;
+    border-radius: 8px;
+}
 .hotspots-location{
-    background-color: skyblue;
+    background-color:whitesmoke;
+    padding: 10px;
     color: black;
     display: grid;
+    width: 50%;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(255, 253, 253, 0.955);
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 5px;
 }
-
+.crime-type-input{
+    padding: 10px;
+    width: 50%;
+    background-color: black;
+    color: white;
+}
 .locations{
-    background-color: white;
+    background-color: orange;
+    padding: 10px;
+    border-radius: 8px;
     color: black;
 }
+
+ @media screen and (max-width:768px) {
+   
+
+.hotspots-menu {
+    width: 360px;
+}
+.hotspots-location {
+    width: 360px;
+
+}
+ }
