--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -32,6 +32,66 @@ ul .active-link {
     color: black;
 }
 
+.hamburger-btn {
+    margin-left: 0px;
+    margin-right: 1380px;
+    padding: 10px;
+    font-size: x-large;
+    font-weight: bold;
+    background-color: whitesmoke;
+    color: black;
+    border-radius: 5px;
+
+}
+
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: -250px; 
+    width: 250px;
+    height: 100vh;
+    background-color: black;
+    color: white;
+    transition: left 0.3s ease;
+    z-index: 1500;
+    padding: 20px;
+}
+
+.sidebar.open {
+    left: 0;
+}
+
+.sidebar .close-btn {
+    font-size: 24px;
+    background: none;
+    border: none;
+    color: white;
+    float: right;
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+
+.sidebar ul {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.sidebar ul .active-link {
+    background-color: white;
+    color: black;
+}
+
+/* Optional overlay behind sidebar */
+.sidebar-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background: rgba(0,0,0,0.4);
+    z-index: 1400;
+}
+
 @media screen and (max-width: 768px) {
     header {
         padding: 15px;
