--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -25,7 +25,7 @@ form {
     justify-content: center;
     width: 100%;
     padding: 20px;
-    background-color: steelblue;
+    background-color: orange;
     color: black;
     border-radius: 10px;
     gap: 5px;
