--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -66,6 +66,20 @@ form button:hover {
     border: 1px solid black;
 }
 
+.spinner {
+  width: 30px;
+  height: 30px;
+  border: 4px solid #ccc;
+  border-top: 4px solid black;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin: auto;
+}
+
+@keyframes spin {
+  to { transform: rotate(360deg); }
+}
+
 @media (max-width: 600px) {
     .login-page {
         padding: 10px;
