--- a/client/src/components/MLAI/Hotspots/Hotspots.css
+++ b/client/src/components/MLAI/Hotspots/Hotspots.css
@@ -79,6 +79,20 @@
   text-align: center;
 }
 
+.spinner {
+  width: 30px;
+  height: 30px;
+  border: 4px solid #ccc;
+  border-top: 4px solid black;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin: auto;
+}
+
+@keyframes spin {
+  to { transform: rotate(360deg); }
+}
+
 @media screen and (max-width: 768px) {
   .hotspots-page {
     padding: 10px;
