--- a/client/src/components/AddUser/AddUser.css
+++ b/client/src/components/AddUser/AddUser.css
@@ -21,6 +21,20 @@
   box-shadow: 0 6px 16px rgba(255, 165, 0, 0.2);
 }
 
+.spinner {
+  width: 30px;
+  height: 30px;
+  border: 4px solid #ccc;
+  border-top: 4px solid black;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin: auto;
+}
+
+@keyframes spin {
+  to { transform: rotate(360deg); }
+}
+
 form {
   background-color: orange;
   color: black;
