--- a/client/src/components/CrimeLogs/CrimeLogs.css
+++ b/client/src/components/CrimeLogs/CrimeLogs.css
@@ -38,6 +38,20 @@
   box-shadow: 0 0 10px rgba(255, 165, 0, 0.1);
 }
 
+.spinner {
+  width: 30px;
+  height: 30px;
+  border: 4px solid #ccc;
+  border-top: 4px solid black;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin: auto;
+}
+
+@keyframes spin {
+  to { transform: rotate(360deg); }
+}
+
 table {
   background-color: orange;
   color: black;
